# tradeflow-app

./: .gitignore  USER_MANUAL.md  diff.txt  index.html  package-lock.json  package.json  scratch.rs  tailwind.config.js
TradeFlow Installer/: TradeFlow Nepal_1.0.0_x64_en-US.msi
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs
src/api/: index.ts
src/assets/: demo-logo.ts
src/components/: Layout.tsx  Sidebar.tsx  shared.tsx
src/constants/: index.ts
src/pages/auth/: LoginPage.tsx
src/pages/banking/: BankHistoryPage.tsx
src/pages/costing/: CostSheetDetailPage.tsx  CostSheetPage.tsx  CostSheetsListPage.tsx
src/pages/dashboard/: DashboardPage.tsx
src/pages/forex/: ForexLandedCostPage.tsx
src/pages/invoices/: InvoiceDetailPage.tsx  InvoicesListPage.tsx  NewInvoicePage.tsx
src/pages/parties/: PartiesPage.tsx
src/pages/production/: ProductionTrackingPage.tsx
src/pages/products/: ProductsPage.tsx  StockLedgerPage.tsx
src/pages/profit/: ProfitTargetsPage.tsx
src/pages/reports/: AccountingPage.tsx  ReportsPage.tsx
src/pages/routes/: RoutesPage.tsx
src/pages/settings/: SettingsPage.tsx
src/stores/: index.ts
src/types/: index.ts
src/utils/: index.ts
